--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a website as a source of electronic musical materials",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-database": "json-server --watch db/db.json --port 8000",
+    "deploy": "git push -u origin main"
   },
   "author": "Vaydar",
   "license": "ISC",
